// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Secret Details File Secret 1`] = `
<div>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws container standard StyledProps---flex--2Jz8 StyledProps---padding-left-large--28UT StyledProps---padding-right-large--2vF9"
  >
    <div
      class="Layout---vertical--3Szv StyledProps---main--1Wws"
    >
      <div>
        <a
          href="/account/dummy/admin/organizations/dummy/resources/connectors"
        >
          Resources
        </a>
         /
         
        <a
          href="/account/dummy/admin/organizations/dummy/resources/secrets"
        >
          Secrets
        </a>
      </div>
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        abhi-test-1
      </p>
    </div>
  </div>
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-large--26zZ"
  >
    <div
      class="switch"
    >
      <div
        class="item selected"
      >
        Visual
      </div>
      <div
        class="item"
      >
        YAML
      </div>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws StyledProps---margin-bottom-large--1jL3 StyledProps---margin-top-large--1oBg"
      style="align-items: center;"
    >
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        Secret Details
      </p>
      <button
        class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-edit StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
          icon="edit"
        >
          <svg
            data-icon="edit"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              edit
            </desc>
            <path
              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Edit Details
        </span>
      </button>
    </div>
    <div
      class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
    >
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
        style="width: 60%;"
      >
        <div
          class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws"
        >
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws detailsSection renderDetails"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-grey700--WvM3"
            >
              Overview
            </p>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Name
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhi-test-1
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Description
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  asd
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Identifier
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhitest1
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws detailsSection renderDetails"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-grey700--WvM3"
            >
              Credentials
            </p>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Secret Type
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  Text
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Secret Value
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  encrypted file
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Secrets Manager
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  Vault1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Secret Details SSH Secret with Key 1`] = `
<div>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws container standard StyledProps---flex--2Jz8 StyledProps---padding-left-large--28UT StyledProps---padding-right-large--2vF9"
  >
    <div
      class="Layout---vertical--3Szv StyledProps---main--1Wws"
    >
      <div>
        <a
          href="/account/dummy/admin/resources/connectors"
        >
          Resources
        </a>
         /
         
        <a
          href="/account/dummy/admin/resources/secrets"
        >
          Secrets
        </a>
      </div>
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        abhi-test-1
      </p>
    </div>
  </div>
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-large--26zZ"
  >
    <div
      class="switch"
    >
      <div
        class="item selected"
      >
        Visual
      </div>
      <div
        class="item"
      >
        YAML
      </div>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws StyledProps---margin-bottom-large--1jL3 StyledProps---margin-top-large--1oBg"
      style="align-items: center;"
    >
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        Secret Details
      </p>
      <button
        class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-edit StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
          icon="edit"
        >
          <svg
            data-icon="edit"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              edit
            </desc>
            <path
              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Edit Details
        </span>
      </button>
    </div>
    <div
      class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
    >
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
        style="width: 60%;"
      >
        <div
          class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws"
        >
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws detailsSection renderDetails"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-grey700--WvM3"
            >
              Overview
            </p>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Name
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhi-test-1
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Description
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  asd
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Identifier
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhitest1
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws detailsSection renderDetails"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-grey700--WvM3"
            >
              Credentials
            </p>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Secret Type
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  Text
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Secret Value
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  encrypted file
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Secrets Manager
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  Vault1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Secret Details Text Secret 1`] = `
<div>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws container standard StyledProps---flex--2Jz8 StyledProps---padding-left-large--28UT StyledProps---padding-right-large--2vF9"
  >
    <div
      class="Layout---vertical--3Szv StyledProps---main--1Wws"
    >
      <div>
        <a
          href="/account/dummy/admin/resources/connectors"
        >
          Resources
        </a>
         /
         
        <a
          href="/account/dummy/admin/resources/secrets"
        >
          Secrets
        </a>
      </div>
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        abhi-test-1
      </p>
    </div>
  </div>
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-large--26zZ"
  >
    <div
      class="switch"
    >
      <div
        class="item selected"
      >
        Visual
      </div>
      <div
        class="item"
      >
        YAML
      </div>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws StyledProps---margin-bottom-large--1jL3 StyledProps---margin-top-large--1oBg"
      style="align-items: center;"
    >
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        Secret Details
      </p>
      <button
        class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-edit StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
          icon="edit"
        >
          <svg
            data-icon="edit"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              edit
            </desc>
            <path
              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Edit Details
        </span>
      </button>
    </div>
    <div
      class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
    >
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
        style="width: 60%;"
      >
        <div
          class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws"
        >
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws detailsSection renderDetails"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-grey700--WvM3"
            >
              Overview
            </p>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Name
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhi-test-1
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Description
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  asd
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Identifier
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhitest1
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws detailsSection renderDetails"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-grey700--WvM3"
            >
              Credentials
            </p>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Secret Type
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  Text
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Secret Value
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  encrypted file
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Secrets Manager
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  Vault1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
